--- a/RythmAnalytics/LyricsAnalysis.ipynb
+++ b/RythmAnalytics/LyricsAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -26,88 +26,50 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Rank</th>\n",
-       "      <th>Song</th>\n",
        "      <th>Artist</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Lyrics</th>\n",
-       "      <th>Source</th>\n",
+       "      <th>Count of Albums</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>wooly bully</td>\n",
-       "      <td>sam the sham and the pharaohs</td>\n",
-       "      <td>1965</td>\n",
-       "      <td>sam the sham miscellaneous wooly bully wooly b...</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>madonna</td>\n",
+       "      <td>35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>i cant help myself sugar pie honey bunch</td>\n",
-       "      <td>four tops</td>\n",
-       "      <td>1965</td>\n",
-       "      <td>sugar pie honey bunch you know that i love yo...</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>elton john</td>\n",
+       "      <td>26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>i cant get no satisfaction</td>\n",
-       "      <td>the rolling stones</td>\n",
-       "      <td>1965</td>\n",
-       "      <td></td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>mariah carey</td>\n",
+       "      <td>25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>you were on my mind</td>\n",
-       "      <td>we five</td>\n",
-       "      <td>1965</td>\n",
-       "      <td>when i woke up this morning you were on my mi...</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>michael jackson</td>\n",
+       "      <td>22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>youve lost that lovin feelin</td>\n",
-       "      <td>the righteous brothers</td>\n",
-       "      <td>1965</td>\n",
-       "      <td>you never close your eyes anymore when i kiss...</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>janet jackson</td>\n",
+       "      <td>22</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Rank                                      Song  \\\n",
-       "0     1                               wooly bully   \n",
-       "1     2  i cant help myself sugar pie honey bunch   \n",
-       "2     3                i cant get no satisfaction   \n",
-       "3     4                       you were on my mind   \n",
-       "4     5              youve lost that lovin feelin   \n",
-       "\n",
-       "                          Artist  Year  \\\n",
-       "0  sam the sham and the pharaohs  1965   \n",
-       "1                      four tops  1965   \n",
-       "2             the rolling stones  1965   \n",
-       "3                        we five  1965   \n",
-       "4         the righteous brothers  1965   \n",
-       "\n",
-       "                                              Lyrics  Source  \n",
-       "0  sam the sham miscellaneous wooly bully wooly b...     3.0  \n",
-       "1   sugar pie honey bunch you know that i love yo...     1.0  \n",
-       "2                                                        1.0  \n",
-       "3   when i woke up this morning you were on my mi...     1.0  \n",
-       "4   you never close your eyes anymore when i kiss...     1.0  "
+       "            Artist  Count of Albums\n",
+       "0          madonna               35\n",
+       "1       elton john               26\n",
+       "2     mariah carey               25\n",
+       "3  michael jackson               22\n",
+       "4    janet jackson               22"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,14 +94,80 @@
     "billboard_lyrics_data = pd.read_csv(file_to_load2, encoding = \"ISO-8859-1\")\n",
     "\n",
     "#Get an idea for what the data looks like \n",
-    "billboard_lyrics_data.head(5)"
+    "# billboard_lyrics_data.head(5)\n",
+    "a = pd.DataFrame(billboard_lyrics_data[\"Artist\"].value_counts()).reset_index()\n",
+    "a.columns =(\"Artist\",\"Count of Albums\")\n",
+    "a.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2015</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year\n",
+       "0  2019\n",
+       "1  2018\n",
+       "2  2017\n",
+       "3  2016\n",
+       "4  2015"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# rds_connection_string = \"postgres:Ucb@2019@localhost:5432/RythmAnalytics\"\n",
     "# engine = create_engine(f'postgresql://{rds_connection_string}')\n",
@@ -152,7 +180,12 @@
     "# session = Session(engine)\n",
     "# engine.table_names()\n",
     "# billboard_lyrics_data.to_sql(name='Rolling_Stones', con=engine, if_exists='replace', index=False)\n",
-    "# pd.read_sql_query('SELECT * FROM \"Rolling_Stones\"', con=engine).head()"
+    "# pd.read_sql_query('SELECT * FROM \"Rolling_Stones\"', con=engine).head()\n",
+    "\n",
+    "listYear= ['2019','2018','2017','2016','2015','2014','2013','2012','2011','2010','2009','2008','2007','2006']\n",
+    "df = pd.DataFrame(listYear,columns=[\"Year\"])\n",
+    "list(df.head())\n",
+    "# df.head()"
    ]
   },
   {
@@ -1308,9 +1341,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:PythonData] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-PythonData-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1322,7 +1355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
